revised pynb for dataviz

--- a/lessons/lesson04_matplotlib_and_EDA/Visualization_Instructional_Set.ipynb
+++ b/lessons/lesson04_matplotlib_and_EDA/Visualization_Instructional_Set.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6fa7a2b296a9987bf9a703f7d7589f9afd70c433617b9149e329ca7450ecba7d"
+  "signature": "sha256:ee3f1d69944389fa22adc28ba47d6b648996f1937d510b4daa1d45d38de2d993"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -895,7 +895,7 @@
       "* Include multiple variables, either on different or one one chart.\n",
       "* Include data subsets\n",
       "\n",
-      "Or: Using the Titanic or the Baseball dataset, ask a question that can be answered through visualization, and create the graph that provides the answer.\n",
+      "Or: Using Titanic, Baseball, or one of these [example datasets](http://vincentarelbundock.github.io/Rdatasets/datasets.html), ask a question that can be answered through visualization, and create the graph that provides the answer.\n",
       "* Include titles and axes labels\n",
       "* Include multiple variables, either on different or one one chart.\n",
       "* Include data subsets\n",
