switching out to latex; adding lec7 lecture

--- a/lessons/lesson07_linear_regression/Linear Regression.ipynb
+++ b/lessons/lesson07_linear_regression/Linear Regression.ipynb
@@ -24,97 +24,29 @@
       "from matplotlib import pyplot as plt\n",
       "from sklearn.linear_model import LinearRegression\n",
       "from sklearn.feature_selection import f_regression\n",
-      "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-      "from sympy import * # because my LaTeX is muy mal :(\n",
-      "%load_ext sympyprinting"
+      "from sklearn.metrics import mean_squared_error, mean_absolute_error"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "The sympyprinting extension is already loaded. To reload it, use:\n",
-        "  %reload_ext sympyprinting\n"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
       "##Part 1: Let's use numpy to write the linear regression formula\n",
-      "Keep in mind that we know x and y, and can assume that \u03b1 (intercept) is 1 in order to solve for the coefficients \u03b2"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "a, b, x, y, e = symbols('alpha beta x y epsilon')\n",
-      "Eq(y, b*x + a + e)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$$y = \\alpha + \\beta x + \\epsilon$$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "y = \u03b1 + \u03b2\u22c5x + \u03b5"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "Linear Regression Solved"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "X = MatrixSymbol('X', 3, 3)\n",
-      "y = MatrixSymbol('y', 3, 3)\n",
-      "Eq(b, ((X.T*X)**-1)*(X.T*y))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "latex": [
-        "$$\\beta = \\left(X^T X\\right)^{-1} X^T y$$"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 4,
-       "text": [
-        "          -1     \n",
-        "    \u239b T  \u239e    T  \n",
-        "\u03b2 = \u239dX \u22c5X\u23a0  \u22c5X \u22c5y"
-       ]
-      }
-     ],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
+      "Keep in mind that we know x and y, and can assume that \u03b1 (intercept) is 1 in order to solve for the coefficients \u03b2\n",
+      "\n",
+      "Linear Regression Formula\n",
+      "$$y = \\alpha + \\beta x + \\epsilon$$\n",
+      "\n",
+      "Linear Regression solved for coefficients \n",
+      "$$\\beta = \\left({X}^\\top {X}\\right) ^{-1} {X}^\\top y$$\n",
+      "\n",
       "Bearing in mind that X and y are matrices, and in numpy there is a transpose function (as well as dot matrix multipication, we can write out the function for a simple linear regression.\n",
       "\n",
-      "You can compare your regression function to sklearn's <a href=\"https://github.com/scikit-learn/scikit-learn/blob/master/sklearn/linear_model/base.py#L331\">here</a>."
+      "You can compare our very lightweight regression function to sklearn's <a href=\"https://github.com/scikit-learn/scikit-learn/blob/master/sklearn/linear_model/base.py#L331\">here</a>."
      ]
     },
     {
@@ -157,9 +89,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Below, write the function that would use this output to predict new data elements\n",
-      "\n",
-      "(finish the return statement)"
+      "Below, write the function that would use this output to predict new data elements (finish the return statement)."
      ]
     },
     {
