--- a/Admin/StudentCallOn.ipynb
+++ b/Admin/StudentCallOn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:22b2167fcc2a1c8b93c1d7c825f35aeddac398776a1b838c7655500f7b472086"
+  "signature": "sha256:4a18c526200205d652055cbf58c60bf6b96e61fc89d0997545fc362de8732c9e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "collapsed": false,
      "input": [
       "# Initialize\n",
-      "students=(\"David,Sam,Ryan,Anastasia,Jon,Timothy,Deepti,Chris,julia,Carlo,Venus,Laila,Danny,Michael,Victor,Robert,Radu,David,Ariba,Rob,Justin\")\n",
+      "students=(\"David,Sam,Ryan,Anastasia,Jon,Timothy,Deepti,Chris,julia,Carlo,Venus,Laila,Danny,Michael,Robert,Radu,David,Ariba,Rob,Justin\")\n",
       "import random\n",
       "students = students.split(\",\")\n",
       "notanswered=students\n",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 161
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -48,15 +48,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Current Student:  Sam\n",
+        "Current Student:  Michael\n",
         "\n",
         "\n",
-        "20 remaining Students:  \n",
-        "David, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Laila, Danny, Michael, Victor, Robert, Radu, David, Ariba, Rob, Justin\n"
+        "17 remaining Students:  \n",
+        "Sam, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Danny, Robert, Radu, David, Ariba, Rob, Justin\n"
        ]
       }
      ],
-     "prompt_number": 162
+     "prompt_number": 4
     }
    ],
    "metadata": {}
