--- a/Admin/StudentCallOn.ipynb
+++ b/Admin/StudentCallOn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4a18c526200205d652055cbf58c60bf6b96e61fc89d0997545fc362de8732c9e"
+  "signature": "sha256:1ae28a4e55a3475db69294d56c9691ac367e699fbd32983dcea352668f15f74c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "collapsed": false,
      "input": [
       "# Initialize\n",
-      "students=(\"David,Sam,Ryan,Anastasia,Jon,Timothy,Deepti,Chris,julia,Carlo,Venus,Laila,Danny,Michael,Robert,Radu,David,Ariba,Rob,Justin\")\n",
+      "students=(\"Dave,Sam,Ryan,Anastasia,Jon,Timothy,Deepti,Chris,julia,Carlo,Venus,Laila,Michael,Robert,Radu,David,Ariba,Rob,Justin\")\n",
       "import random\n",
       "students = students.split(\",\")\n",
       "notanswered=students\n",
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -48,15 +48,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Current Student:  Michael\n",
+        "Current Student:  Rob\n",
         "\n",
         "\n",
-        "17 remaining Students:  \n",
-        "Sam, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Danny, Robert, Radu, David, Ariba, Rob, Justin\n"
+        "18 remaining Students:  \n",
+        "Dave, Sam, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Laila, Michael, Robert, Radu, David, Ariba, Justin\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 28
     }
    ],
    "metadata": {}
