--- a/Admin/StudentCallOn.ipynb
+++ b/Admin/StudentCallOn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1ae28a4e55a3475db69294d56c9691ac367e699fbd32983dcea352668f15f74c"
+  "signature": "sha256:a5c1d50fbd129c75450ee7edddcdf3524a3e78dca0c5e5266f88164ef9eeef8d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
@@ -48,15 +48,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Current Student:  Rob\n",
+        "Current Student:  Dave\n",
         "\n",
         "\n",
         "18 remaining Students:  \n",
-        "Dave, Sam, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Laila, Michael, Robert, Radu, David, Ariba, Justin\n"
+        "Sam, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Laila, Michael, Robert, Radu, David, Ariba, Rob, Justin\n"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 32
     }
    ],
    "metadata": {}
