--- a/lessons/lesson08_probability_naive_bayes/NB_Biebama_NLTK.ipynb
+++ b/lessons/lesson08_probability_naive_bayes/NB_Biebama_NLTK.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9af4d1bf9f06eab84cc42aec54ce1a3c3a330cfc12e73115b6b5bb41e4fe646e"
+  "signature": "sha256:cdad2565742d364a55a7872cccdf56899a8068f2f61efb6ee365ea523f1eb312"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -465,10 +465,21 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "BiebOrBam('Peace out, ladies')"
+     ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Obama\n"
+       ]
+      }
+     ],
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -500,7 +511,16 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Bieber\n"
+       ]
+      }
+     ],
+     "prompt_number": 31
     },
     {
      "cell_type": "code",
