--- a/lessons/lesson08_probability_naive_bayes/NB_Gender_Names_NLTK.ipynb
+++ b/lessons/lesson08_probability_naive_bayes/NB_Gender_Names_NLTK.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:28b1d3ca437cd567a9bb3f4897848e8002e23f9f69d4e8da84ee9c4dcfc4b17c"
+  "signature": "sha256:9d5a8f6c1389798ec25ea75417e6b789cfa296c71d986499a7a537eaec530716"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,7 +23,171 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "!conda install nltk"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Fetching package metadata: ."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\r\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Solving package specifications: "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        ".."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "."
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\r\n",
+        "# All requested packages already installed.\r\n",
+        "# packages in environment at /Applications/anaconda:\r\n",
+        "#\r\n",
+        "nltk                      2.0.4                np18py27_0  \r\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -35,7 +199,28 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "names.abspath\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 7,
+       "text": [
+        "<bound method WordListCorpusReader.abspath of <WordListCorpusReader in '/Users/dave/nltk_data/corpora/names'>>"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -46,7 +231,31 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Names Corpus, Version 1.3 (1994-03-29)\n",
+        "Copyright (C) 1991 Mark Kantrowitz\n",
+        "Additions by Bill Ross\n",
+        "\n",
+        "This corpus contains 5001 female names and 2943 male names, sorted\n",
+        "alphabetically, one per line.\n",
+        "\n",
+        "You may use the lists of names for any purpose, so long as credit is\n",
+        "given in any published work. You may also redistribute the list if you\n",
+        "provide the recipients with a copy of this README file. The lists are\n",
+        "not in the public domain (I retain the copyright on the lists) but are\n",
+        "freely redistributable.  If you have any additions to the lists of\n",
+        "names, I would appreciate receiving them.\n",
+        "\n",
+        "Mark Kantrowitz <mkant+@cs.cmu.edu>\n",
+        "http://www-2.cs.cmu.edu/afs/cs/project/ai-repository/ai/areas/nlp/corpora/names/\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
