Revised Logistic Regression and Classifier Comparison Notebook and added text to README

--- a/Admin/StudentCallOn.ipynb
+++ b/Admin/StudentCallOn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a5c1d50fbd129c75450ee7edddcdf3524a3e78dca0c5e5266f88164ef9eeef8d"
+  "signature": "sha256:76dfddc5ea46df5c77791c85f6ac564551b3f86e844a6e59c1f5f61ee2aeac90"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -32,7 +32,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 31
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -48,15 +48,15 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Current Student:  Dave\n",
+        "Current Student:  Chris\n",
         "\n",
         "\n",
         "18 remaining Students:  \n",
-        "Sam, Ryan, Anastasia, Jon, Timothy, Deepti, Chris, julia, Carlo, Venus, Laila, Michael, Robert, Radu, David, Ariba, Rob, Justin\n"
+        "Dave, Sam, Ryan, Anastasia, Jon, Timothy, Deepti, julia, Carlo, Venus, Laila, Michael, Robert, Radu, David, Ariba, Rob, Justin\n"
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 26
     }
    ],
    "metadata": {}
