--- a/lessons/lesson09_decision_trees_random_forests/sklearn_decision_trees.ipynb
+++ b/lessons/lesson09_decision_trees_random_forests/sklearn_decision_trees.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:15d438fd73b86732df2c4201b457704bec3bf1e94c8f386b5acb2804c84e63b0"
+  "signature": "sha256:568cc38f28bb065be47e5d8c46fc61d9a4aad51aa9c3e1d914d4032a11afc84a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -75,7 +75,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -90,7 +90,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 2,
        "text": [
         "['0',\n",
         " '3',\n",
@@ -106,7 +106,7 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -127,7 +127,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -147,7 +147,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -168,7 +168,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -190,14 +190,14 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "print feature_names\n",
-      "print titanic_X[12], titanic_y[12]\n"
+      "print titanic_X[5], titanic_y[5]\n"
      ],
      "language": "python",
      "metadata": {},
@@ -207,7 +207,7 @@
        "stream": "stdout",
        "text": [
         "['pclass' 'age' 'sex']\n",
-        "['3' '20' 'male'] 0\n"
+        "['3' '29.6991176471' '1'] 0\n"
        ]
       }
      ],
@@ -241,7 +241,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Categorical classes: ['female' 'male']\n",
+        "Categorical classes: ['0' '1']\n",
         "Integer classes: [0 1]\n"
        ]
       }
@@ -253,7 +253,7 @@
      "collapsed": false,
      "input": [
       "print feature_names\n",
-      "print titanic_X[12], titanic_y[12]\n"
+      "print titanic_X[5], titanic_y[5]\n"
      ],
      "language": "python",
      "metadata": {},
@@ -263,11 +263,11 @@
        "stream": "stdout",
        "text": [
         "['pclass' 'age' 'sex']\n",
-        "['3' '20' '1'] 0\n"
+        "['3' '29.6991176471' '1'] 0\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -318,7 +318,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -339,7 +339,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -358,25 +358,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 14
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "### Dave recommends looking at train_test_split -- very simple"
-     ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "train_test_split??"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -404,7 +386,132 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 40
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Show the built tree, using pydot\n",
+      "import pydot,StringIO\n",
+      "dot_data = StringIO.StringIO() "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "tree.export_graphviz(clf, out_file=dot_data, feature_names=['age','sex','1st_class','2nd_class','3rd_class']) "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 48,
+       "text": [
+        "<StringIO.StringIO instance at 0x1067f37e8>"
+       ]
+      }
+     ],
+     "prompt_number": 48
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "dot_data.getvalue()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 52,
+       "text": [
+        "'digraph Tree {\\n0 [label=\"sex <= 0.5000\\\\nentropy = 0.957149056269\\\\nsamples = 668\", shape=\"box\"] ;\\n1 [label=\"3rd_class <= 0.5000\\\\nentropy = 0.842527857585\\\\nsamples = 229\", shape=\"box\"] ;\\n0 -> 1 ;\\n2 [label=\"age <= 23.5000\\\\nentropy = 0.318855418521\\\\nsamples = 121\", shape=\"box\"] ;\\n1 -> 2 ;\\n3 [label=\"entropy = 0.0000\\\\nsamples = 33\\\\nvalue = [  0.  33.]\", shape=\"box\"] ;\\n2 -> 3 ;\\n4 [label=\"entropy = 0.4006\\\\nsamples = 88\\\\nvalue = [  7.  81.]\", shape=\"box\"] ;\\n2 -> 4 ;\\n5 [label=\"age <= 38.5000\\\\nentropy = 0.999752610166\\\\nsamples = 108\", shape=\"box\"] ;\\n1 -> 5 ;\\n6 [label=\"entropy = 0.9982\\\\nsamples = 99\\\\nvalue = [ 47.  52.]\", shape=\"box\"] ;\\n5 -> 6 ;\\n7 [label=\"entropy = 0.5033\\\\nsamples = 9\\\\nvalue = [ 8.  1.]\", shape=\"box\"] ;\\n5 -> 7 ;\\n8 [label=\"age <= 8.5000\\\\nentropy = 0.713651451474\\\\nsamples = 439\", shape=\"box\"] ;\\n0 -> 8 ;\\n9 [label=\"3rd_class <= 0.5000\\\\nentropy = 0.899743758698\\\\nsamples = 19\", shape=\"box\"] ;\\n8 -> 9 ;\\n10 [label=\"entropy = 0.0000\\\\nsamples = 9\\\\nvalue = [ 0.  9.]\", shape=\"box\"] ;\\n9 -> 10 ;\\n11 [label=\"entropy = 0.9710\\\\nsamples = 10\\\\nvalue = [ 6.  4.]\", shape=\"box\"] ;\\n9 -> 11 ;\\n12 [label=\"1st_class <= 0.5000\\\\nentropy = 0.666345599469\\\\nsamples = 420\", shape=\"box\"] ;\\n8 -> 12 ;\\n13 [label=\"entropy = 0.5272\\\\nsamples = 327\\\\nvalue = [ 288.   39.]\", shape=\"box\"] ;\\n12 -> 13 ;\\n14 [label=\"entropy = 0.9472\\\\nsamples = 93\\\\nvalue = [ 59.  34.]\", shape=\"box\"] ;\\n12 -> 14 ;\\n}digraph Tree {\\n0 [label=\"sex <= 0.5000\\\\nentropy = 0.957149056269\\\\nsamples = 668\", shape=\"box\"] ;\\n1 [label=\"3rd_class <= 0.5000\\\\nentropy = 0.842527857585\\\\nsamples = 229\", shape=\"box\"] ;\\n0 -> 1 ;\\n2 [label=\"age <= 23.5000\\\\nentropy = 0.318855418521\\\\nsamples = 121\", shape=\"box\"] ;\\n1 -> 2 ;\\n3 [label=\"entropy = 0.0000\\\\nsamples = 33\\\\nvalue = [  0.  33.]\", shape=\"box\"] ;\\n2 -> 3 ;\\n4 [label=\"entropy = 0.4006\\\\nsamples = 88\\\\nvalue = [  7.  81.]\", shape=\"box\"] ;\\n2 -> 4 ;\\n5 [label=\"age <= 38.5000\\\\nentropy = 0.999752610166\\\\nsamples = 108\", shape=\"box\"] ;\\n1 -> 5 ;\\n6 [label=\"entropy = 0.9982\\\\nsamples = 99\\\\nvalue = [ 47.  52.]\", shape=\"box\"] ;\\n5 -> 6 ;\\n7 [label=\"entropy = 0.5033\\\\nsamples = 9\\\\nvalue = [ 8.  1.]\", shape=\"box\"] ;\\n5 -> 7 ;\\n8 [label=\"age <= 8.5000\\\\nentropy = 0.713651451474\\\\nsamples = 439\", shape=\"box\"] ;\\n0 -> 8 ;\\n9 [label=\"3rd_class <= 0.5000\\\\nentropy = 0.899743758698\\\\nsamples = 19\", shape=\"box\"] ;\\n8 -> 9 ;\\n10 [label=\"entropy = 0.0000\\\\nsamples = 9\\\\nvalue = [ 0.  9.]\", shape=\"box\"] ;\\n9 -> 10 ;\\n11 [label=\"entropy = 0.9710\\\\nsamples = 10\\\\nvalue = [ 6.  4.]\", shape=\"box\"] ;\\n9 -> 11 ;\\n12 [label=\"1st_class <= 0.5000\\\\nentropy = 0.666345599469\\\\nsamples = 420\", shape=\"box\"] ;\\n8 -> 12 ;\\n13 [label=\"entropy = 0.5272\\\\nsamples = 327\\\\nvalue = [ 288.   39.]\", shape=\"box\"] ;\\n12 -> 13 ;\\n14 [label=\"entropy = 0.9472\\\\nsamples = 93\\\\nvalue = [ 59.  34.]\", shape=\"box\"] ;\\n12 -> 14 ;\\n}'"
+       ]
+      }
+     ],
+     "prompt_number": 52
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "pydot.graph_from_dot_data(dot_data.getvalue())"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "global name 'dot_parser' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-53-1dacaaf9f39c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpydot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_from_dot_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdot_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Applications/anaconda/lib/python2.7/site-packages/pydot.pyc\u001b[0m in \u001b[0;36mgraph_from_dot_data\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    218\u001b[0m     \"\"\"\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 220\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdot_parser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_dot_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    221\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: global name 'dot_parser' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 53
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "graph = pydot.graph_from_dot_data(dot_data.getvalue()) \n",
+      "graph.write_png('titanic.png') \n",
+      "from IPython.core.display import Image \n",
+      "Image(filename='titanic.png')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "NameError",
+       "evalue": "global name 'dot_parser' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-43-70ae20df3b69>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpydot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph_from_dot_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdot_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite_png\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'titanic.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'titanic.png'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Applications/anaconda/lib/python2.7/site-packages/pydot.pyc\u001b[0m in \u001b[0;36mgraph_from_dot_data\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    218\u001b[0m     \"\"\"\n\u001b[1;32m    219\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 220\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdot_parser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse_dot_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    221\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    222\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mNameError\u001b[0m: global name 'dot_parser' is not defined"
+       ]
+      }
+     ],
+     "prompt_number": 43
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "tree.export_graphviz(clf, out_file=dot_data, feature_names=['age','sex','1st_class','2nd_class','3rd_class']) \n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "'RandomForestClassifier' object has no attribute 'tree_'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-37-ac66cfa0bb0a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport_graphviz\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdot_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature_names\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'age'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'sex'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'1st_class'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'2nd_class'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'3rd_class'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m/Applications/anaconda/lib/python2.7/site-packages/sklearn/tree/export.pyc\u001b[0m in \u001b[0;36mexport_graphviz\u001b[0;34m(decision_tree, out_file, feature_names, max_depth, close)\u001b[0m\n\u001b[1;32m    129\u001b[0m         \u001b[0mrecurse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdecision_tree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    130\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m         \u001b[0mrecurse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdecision_tree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtree_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    132\u001b[0m     \u001b[0mout_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mAttributeError\u001b[0m: 'RandomForestClassifier' object has no attribute 'tree_'"
+       ]
+      }
+     ],
+     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
@@ -458,7 +565,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -492,7 +599,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 20
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -522,7 +629,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -551,7 +658,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -564,6 +671,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "# Attempt 1\n",
       "clf_dt=tree.DecisionTreeClassifier(criterion='entropy', max_depth=3,min_samples_leaf=5)\n",
       "clf_dt.fit(X_train,y_train)\n",
       "measure_performance(X_test,y_test,clf_dt)\n",
@@ -594,7 +702,55 @@
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "tree.DecisionTreeClassifier?"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Attempt 2\n",
+      "clf_dt=tree.DecisionTreeClassifier(criterion='gini', max_depth=3,min_samples_leaf=20)\n",
+      "clf_dt.fit(X_train,y_train)\n",
+      "measure_performance(X_test,y_test,clf_dt)\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Accuracy:0.825 \n",
+        "\n",
+        "Classification report\n",
+        "             precision    recall  f1-score   support\n",
+        "\n",
+        "        0.0       0.86      0.84      0.85       134\n",
+        "        1.0       0.77      0.80      0.78        89\n",
+        "\n",
+        "avg / total       0.83      0.83      0.83       223\n",
+        "\n",
+        "\n",
+        "Confusion matrix\n",
+        "[[113  21]\n",
+        " [ 18  71]] \n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "heading",
