add some extra information on the primary notebook for today

--- a/lessons/lesson14_ensembles/Ensembles.ipynb
+++ b/lessons/lesson14_ensembles/Ensembles.ipynb
@@ -222,7 +222,7 @@
        ]
       }
      ],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -242,6 +242,7 @@
       "from pandas import read_csv\n",
       "from sklearn.cross_validation import train_test_split, Bootstrap\n",
       "from sklearn.ensemble.forest import ExtraTreesClassifier\n",
+      "from sklearn.naive_bayes import MultinomialNB\n",
       "from sklearn import metrics\n",
       "from sklearn import preprocessing\n",
       "\n",
@@ -268,10 +269,19 @@
       "                                                    test_size=0.4,\n",
       "                                                    random_state=123)\n",
       "\n",
+      "## Compare the results here of random forests, adaboost, and a non-ensembled naive bayes classifier.\n",
+      "clf = ExtraTreesClassifier(n_estimators=1, random_state=10).fit(x_train, y_train)\n",
+      "print ExtraTreesClassifier.__name__, 'results'\n",
+      "print metrics.confusion_matrix(clf.predict(x_test), y_test)\n",
       "\n",
-      "clf = AdaBoostClassifier(n_estimators=100, random_state=10).fit(x_train, y_train)\n",
-      "print alg.__name__, 'results'\n",
-      "print metrics.confusion_matrix(etclf.predict(x_test), y_test)"
+      "clf = AdaBoostClassifier(n_estimators=1, random_state=10).fit(x_train, y_train)\n",
+      "print AdaBoostClassifier.__name__, 'results'\n",
+      "print metrics.confusion_matrix(clf.predict(x_test), y_test)\n",
+      "\n",
+      "clf = MultinomialNB().fit(x_train, y_train)\n",
+      "print MultinomialNB.__name__, 'results'\n",
+      "print metrics.confusion_matrix(clf.predict(x_test), y_test)\n",
+      "## Sometimes a simpler answer is a better approach!"
      ],
      "language": "python",
      "metadata": {},
@@ -280,15 +290,131 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "ExtraTreesClassifier results\n",
+        "[[119   7   0   9]\n",
+        " [  9  81   4  14]\n",
+        " [  0   7  16   4]\n",
+        " [  8   4   0  55]]\n",
         "AdaBoostClassifier results\n",
-        "[[136   1   0   0]\n",
-        " [  0  98   0   1]\n",
+        "[[131  14   4  62]\n",
+        " [  5  85  16  20]\n",
+        " [  0   0   0   0]\n",
+        " [  0   0   0   0]]\n",
+        "MultinomialNB results\n",
+        "[[136   2   0   0]\n",
+        " [  0  93   0   0]\n",
         " [  0   0  20   0]\n",
-        " [  0   0   0  81]]\n"
+        " [  0   4   0  82]]\n"
        ]
       }
      ],
-     "prompt_number": 22
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "What if we brute force our way to the right answer? (Slow computers, be cautious!)"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "clf = ExtraTreesClassifier(n_estimators=10000, random_state=10).fit(x_train, y_train)\n",
+      "print ExtraTreesClassifier.__name__, 'results'\n",
+      "print metrics.confusion_matrix(clf.predict(x_test), y_test)\n",
+      "\n",
+      "clf = AdaBoostClassifier(n_estimators=10000, random_state=10).fit(x_train, y_train)\n",
+      "print AdaBoostClassifier.__name__, 'results'\n",
+      "print metrics.confusion_matrix(clf.predict(x_test), y_test)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "ExtraTreesClassifier results\n",
+        "[[135   1   0   0]\n",
+        " [  1  98   0   1]\n",
+        " [  0   0  20   0]\n",
+        " [  0   0   0  81]]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "AdaBoostClassifier"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " results\n",
+        "[[133   0   0   0]\n",
+        " [  3  98   0   0]\n",
+        " [  0   0  18   0]\n",
+        " [  0   1   2  82]]"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "##Timing\n",
+      "\n",
+      "Try timing the above on your machine (you can use datetimes to get a simple approach here)\n"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from datetime import datetime\n",
+      "\n",
+      "a = datetime.now()\n",
+      "clf = ExtraTreesClassifier(n_estimators=100, random_state=10).fit(x_train, y_train)\n",
+      "print \"High Number of Trees Timing:\", datetime.now() - a\n",
+      "    \n",
+      "a = datetime.now()\n",
+      "clf = AdaBoostClassifier(n_estimators=100, random_state=10).fit(x_train, y_train)\n",
+      "print \"AdaBoost Timing:            \", datetime.now() - a\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " High Number of Trees Timing: 0:00:00.099675\n",
+        "AdaBoost Timing:            "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 0:00:00.326324\n"
+       ]
+      }
+     ],
+     "prompt_number": 24
     },
     {
      "cell_type": "code",
