--- a/lessons/lesson16_databases/mysql_practice.ipynb
+++ b/lessons/lesson16_databases/mysql_practice.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:a659641c734922157e1737a00f4e7d9ff1171f9e9695529171b42e62eed85f48"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,12 +57,105 @@
      ]
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "## Classwork Answers"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "###Tablename Records\n",
+      "\n",
+      "Customers\t91  \n",
+      "Categories\t8  \n",
+      "Employees\t10  \n",
+      "OrderDetails\t518  \n",
+      "Orders\t196  \n",
+      "Products\t77  \n",
+      "Shippers\t3  \n",
+      "Suppliers\t29  "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Cheatsheets:\n",
+      "    http://www.zentut.com/wp-content/uploads/2012/10/sqlcheatsheet.jpg\n",
+      "    http://www.sql.su/\n",
+      "        "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "-- What customers are from the UK\n",
+      "SELECT * FROM Customers WHERE Country = 'UK'\n",
+      "Select all items from customers where the country is UK.\n",
+      "\n",
+      "\n",
+      "\n",
+      "-- What is the name of the customer who has the most orders?\n",
+      "---  'the most orders'\n",
+      "---  '\n",
+      "\n",
+      "SELECT Customers.CustomerName \n",
+      "FROM Customers\n",
+      "JOIN Orders on (Orders.CustomerID = Customers.CustomerID)\n",
+      "GROUP BY Customers.CustomerID\n",
+      "ORDER BY COUNT(Customers.CustomerID) DESC\n",
+      "LIMIT 1\n",
+      "\n",
+      "-- What supplier has the highest average product price?\n",
+      "SELECT Suppliers.*, AVG(Products.Price) FROM Products\n",
+      "JOIN Suppliers ON (Products.SupplierID = Suppliers.SupplierID)\n",
+      "GROUP BY Products.SupplierID\n",
+      "ORDER BY AVG(Products.Price) DESC\n",
+      "Limit 1\n",
+      "\n",
+      "\n",
+      "\n",
+      "-- What category has the most orders?\n",
+      "SELECT Categories.CategoryName, COUNT(OrderDetails.ProductID) FROM OrderDetails\n",
+      "  INNER JOIN Products ON Products.ProductID = OrderDetails.ProductID\n",
+      "  INNER JOIN Categories ON Categories.CategoryID = Products.CategoryID\n",
+      "GROUP BY OrderDetails.ProductID\n",
+      "ORDER BY COUNT(OrderDetails.ProductID) DESC\n",
+      "\n",
+      "-- What employee made the most sales (by number of sales)?\n",
+      "SELECT Employees.*, COUNT(Orders.EmployeeID) FROM Orders\n",
+      "INNER JOIN Employees ON Orders.EmployeeID = Employees.EmployeeID\n",
+      "GROUP BY Orders.EmployeeID\n",
+      "ORDER BY COUNT(Orders.EmployeeID) DESC\n",
+      "LIMIT 1\n",
+      "\n",
+      "-- What employee made the most sales (by value of sales)?\n",
+      "SELECT Employees.*, SUM(Products.Price * OrderDetails.Quantity) AS SalesValue\n",
+      "FROM OrderDetails\n",
+      "  INNER JOIN Orders ON OrderDetails.OrderID = Orders.OrderID\n",
+      "  INNER JOIN Employees ON Orders.EmployeeID = Employees.EmployeeID\n",
+      "  INNER JOIN Products ON OrderDetails.ProductID = Products.ProductID\n",
+      "GROUP BY Employees.EmployeeID\n",
+      "ORDER BY SalesValue DESC\n",
+      "LIMIT 1\n",
+      "\n",
+      "-- What employees have BS degrees? (Hint: Look at LIKE operator)\n",
+      "SELECT * FROM Employees WHERE Notes LIKE '%BS%'\n",
+      "\n",
+      "-- What supplier has the highest average product price *assuming they have at least 2 products* (Hint: Look at the HAVING operator)\n",
+      "SELECT Suppliers.*, AVG(Products.Price)\n",
+      "FROM Products\n",
+      "  INNER JOIN Suppliers ON Products.SupplierID = Suppliers.SupplierID\n",
+      "GROUP BY Products.SupplierID\n",
+      "HAVING COUNT(Products.SupplierID) > 1\n",
+      "ORDER BY AVG(Products.Price) DESC\n",
+      "LIMIT 1\n"
+     ]
     },
     {
      "cell_type": "code",
